force-app/main/default/objects/Demo_Component__c/fields/Date_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Added__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Datetime this component was added to the Demo Component LIbrary</description>
    <label>Date Added</label>
    <type>DateTime</type>
</CustomField>