force-app/main/default/objects/Demo_Component__c/fields/Dependencies_Met__c.field-meta.xml
<CustomField>
    <fullName>Dependencies_Met__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Dependencies Met</label>
    <type>Checkbox</type>
</CustomField>