force-app/main/default/objects/Demo_Component__c/fields/Github_Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>Github_Repository_URL__c</fullName>
    <description>If this package is sourced from a Github Repository, this is its URL.</description>
    <label>Github Repository URL</label>
    <type>Url</type>
</CustomField>