force-app/main/default/objects/Demo_Component__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <description>DateTime Package was Installed</description>
    <label>Install Date</label>
    <type>DateTime</type>
</CustomField>