force-app/main/default/objects/Demo_Component__c/fields/Install_Key__c.field-meta.xml
<CustomField>
    <fullName>Install_Key__c</fullName>
    <description>The key needed to install the package.  You will be prompted for this after clicking the install link.</description>
    <inlineHelpText>The key needed to install the package.  You will be prompted for this after clicking the install link.</inlineHelpText>
    <label>Install Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>