force-app/main/default/objects/Demo_Component__c/fields/Installed__c.field-meta.xml
<CustomField>
    <fullName>Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Package Installed</description>
    <label>Installed</label>
    <type>Checkbox</type>
</CustomField>