force-app/main/default/objects/Demo_Component__c/fields/Installed_Subscriber_Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Installed_Subscriber_Package_Id__c</fullName>
    <label>Installed Subscriber Package Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>