force-app/main/default/objects/Demo_Component__c/fields/Installed_Version__c.field-meta.xml
<CustomField>
    <fullName>Installed_Version__c</fullName>
    <formula>&apos;.0.0.0.1&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installed Version</label>
    <type>Text</type>
</CustomField>