force-app/main/default/objects/Demo_Component__c/fields/Installed_Version_Tracking_Method__c.field-meta.xml
<CustomField>
    <fullName>Installed_Version_Tracking_Method__c</fullName>
    <label>Installed Version Tracking Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Github_Commit</fullName>
                <label>Github Commit</label>
            </value>
            <value>
                <fullName>Github Tag</fullName>
            </value>
            <value>
                <fullName>SFDX Project</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>