force-app/main/default/objects/Demo_Component__c/fields/Last_Fetched__c.field-meta.xml
<CustomField>
    <fullName>Last_Fetched__c</fullName>
    <label>Last Fetched</label>
    <type>DateTime</type>
</CustomField>