force-app/main/default/objects/Demo_Component__c/fields/Latest_Commit_Hash__c.field-meta.xml
<CustomField>
    <fullName>Latest_Commit_Hash__c</fullName>
    <description>Latest Commit Hash of the Master Branch</description>
    <label>Latest Commit Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>