force-app/main/default/objects/Demo_Component__c/fields/Latest_SFDX_Package_Alias__c.field-meta.xml
<CustomField>
    <fullName>Latest_SFDX_Package_Alias__c</fullName>
    <description>Package Alias from sfdx-project.json</description>
    <label>Latest SFDX Package Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>