force-app/main/default/objects/Demo_Component__c/fields/Latest_SFDX_Package_Version_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_SFDX_Package_Version_Name__c</fullName>
    <description>Version Name from SFDX-Package.json file</description>
    <label>Latest SFDX Package Version Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>