force-app/main/default/objects/Demo_Component__c/fields/Latest_Subscriber_Package_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Latest_Subscriber_Package_Version_Id__c</fullName>
    <description>For Packages, the latest Subscriber Package Version ID</description>
    <label>Latest Subscriber Package Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>