force-app/main/default/objects/Demo_Component__c/fields/Latest_Tag_Commit_Description__c.field-meta.xml
<CustomField>
    <fullName>Latest_Tag_Commit_Description__c</fullName>
    <description>Description of the latest Tag</description>
    <label>Latest Tag Commit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>