force-app/main/default/objects/Demo_Component__c/fields/Number_of_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dependencies__c</fullName>
    <label>Number of Dependencies</label>
    <summaryForeignKey>Component_Dependency__c.Demo_Component__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>