force-app/main/default/objects/Demo_Component__c/fields/Package_Install_Url__c.field-meta.xml
<CustomField>
    <fullName>Package_Install_Url__c</fullName>
    <formula>IF(Package_Install_Type_Flag__c,&apos;/packagingSetupUI/ipLanding.app?apvId=&apos; + Latest_Subscriber_Package_Version_Id__c, &apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Install Url</label>
    <type>Text</type>
</CustomField>