force-app/main/default/objects/Demo_Component__c/fields/Package_Installed_Subscriber_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Installed_Subscriber_Version_Id__c</fullName>
    <label>Package Installed Subscriber Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>