force-app/main/default/objects/Demo_Component__c/fields/Package_Installed_Version_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Installed_Version_Name__c</fullName>
    <description>Name of the Installed Component (When Installed via Source)</description>
    <label>Package Installed Version Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>