force-app/main/default/objects/Demo_Component__c/fields/Package_Installed_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Package_Installed_Version_Number__c</fullName>
    <label>Package Installed Version Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>