force-app/main/default/objects/Demo_Component__c/fields/Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Name__c</fullName>
    <description>Name of the Package. Can be sourced by sfdx-project.json or tooling api.</description>
    <label>Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>