force-app/main/default/objects/Demo_Component__c/fields/POC_Email__c.field-meta.xml
<CustomField>
    <fullName>POC_Email__c</fullName>
    <description>Email for the point of contact for the demo</description>
    <inlineHelpText>Email for the point of contact for the demo</inlineHelpText>
    <label>POC Email</label>
    <type>Email</type>
</CustomField>