force-app/main/default/objects/Demo_Component__c/fields/Recently_Updated_Flag__c.field-meta.xml
<CustomField>
    <fullName>Recently_Updated_Flag__c</fullName>
    <formula>Last_Update_Date__c &gt; (Now()-7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recently Updated Flag</label>
    <type>Checkbox</type>
</CustomField>