force-app/main/default/objects/Demo_Component__c/fields/SFDX_Installed_Package_Version_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDX_Installed_Package_Version_Name__c</fullName>
    <label>SFDX Installed Package Version Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>