force-app/main/default/objects/Demo_Component__c/fields/SFDX_Package_Enabled_Flag__c.field-meta.xml
<CustomField>
    <fullName>SFDX_Package_Enabled_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an SFDX Project that leverages Packages for versioning</description>
    <label>SFDX Package Enabled Flag</label>
    <type>Checkbox</type>
</CustomField>