force-app/main/default/objects/Demo_Component__c/fields/Source_Install_Type_Flag__c.field-meta.xml
<CustomField>
    <fullName>Source_Install_Type_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is a Generation 1 Project leveraging a source folder and project.XML, it can deployed on an org as source code.</description>
    <label>Source Install Type Flag</label>
    <type>Checkbox</type>
</CustomField>