force-app/main/default/objects/Demo_Component__c/fields/Source_Install_Url__c.field-meta.xml
<CustomField>
    <fullName>Source_Install_Url__c</fullName>
    <formula>IF(Source_Install_Type_Flag__c,&apos;https://hosted-scratch.herokuapp.com/byoo?template=&apos; + Github_Repository_URL__c, &apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Install Url</label>
    <type>Text</type>
</CustomField>