force-app/main/default/objects/Demo_Component__c/fields/Source_Installed_Tag_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Source_Installed_Tag_DateTime__c</fullName>
    <label>Source Installed Tag DateTime</label>
    <type>DateTime</type>
</CustomField>