force-app/main/default/objects/Demo_Component__c/fields/Source_Installed_Tag_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Installed_Tag_Name__c</fullName>
    <description>Version Name of the installed component (When installed via source)</description>
    <label>Source Installed Tag Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>