force-app/main/default/objects/Demo_Component__c/listViews/Installed_Components.listView-meta.xml
<ListView>
    <fullName>Installed_Components</fullName>
    <columns>NAME</columns>
    <columns>Install_Date__c</columns>
    <columns>Package_Installed_Version_Number__c</columns>
    <columns>Title__c</columns>
    <columns>Update_Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Installed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Installed Components</label>
</ListView>